Add Pages workflow + search UI + index.jsonl

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,7 +1,6 @@
 name: Build & Deploy Pages
 on:
-  push:
-    branches: [ main ]
+  push: { branches: [ main ] }
   workflow_dispatch: {}
 permissions:
   contents: read
