--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,6 +15,7 @@ jobs:
         with: { python-version: '3.11' }
       - run: pip install -r requirements.txt
       - run: python scripts/build_index.py
+      - run: mv index.jsonl docs/
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with: { path: docs }
