--- a/.github/workflows/repo-ci.yml
+++ b/.github/workflows/repo-ci.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
       - name: Validate filenames
         run: python scripts/check_filenames.py
 
@@ -31,6 +34,23 @@ jobs:
         run: |
           python scripts/generate_manifest.py
           python scripts/generate_readme_permalinks.py
+
+      - name: Build search index sample
+        run: |
+          mkdir ci-sample
+          cd ci-sample
+          python - <<'PY'
+import pathlib
+content = b"%PDF-1.4\n1 0 obj\n<< /Type /Catalog /Pages 2 0 R >>\nendobj\n2 0 obj\n<< /Type /Pages /Count 1 /Kids [3 0 R] >>\nendobj\n3 0 obj\n<< /Type /Page /Parent 2 0 R /MediaBox [0 0 200 200] /Contents 4 0 R /Resources << /Font << /F1 5 0 R >> >> >>\nendobj\n4 0 obj\n<< /Length 55 >>\nstream\nBT\n /F1 24 Tf\n 72 120 Td\n (Hello) Tj\nET\nendstream\nendobj\n5 0 obj\n<< /Type /Font /Subtype /Type1 /BaseFont /Helvetica >>\nendobj\nxref\n0 6\n0000000000 65535 f \n0000000010 00000 n \n0000000061 00000 n \n0000000114 00000 n \n0000000277 00000 n \n0000000365 00000 n \ntrailer\n<< /Root 1 0 R /Size 6 >>\nstartxref\n438\n%%EOF\n"
+pathlib.Path('sample.pdf').write_bytes(content)
+PY
+          python ../scripts/build_index.py --base-url https://example.com
+          python - <<'PY'
+import json,sys
+with open('index.jsonl', 'r', encoding='utf-8') as f:
+    for line in f:
+        json.loads(line)
+PY
 
       - name: Upload manifest artifacts
         uses: actions/upload-artifact@v4
