--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 * text=auto eol=lf
 *.pdf filter=lfs diff=lfs merge=lfs -text
+*.pdf -diff linguist-generated=true
+*.csv linguist-detectable=true
+*.json linguist-detectable=true
